# convertia

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .npmrc  .prettierignore  .stylelintignore  .stylelintrc.json  .typos.toml  .yamllint  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  NOTICE  PRIVACY.md  README.md  SECURITY.md  SINGLE-SOURCE-OF-TRUTH.md  THIRD-PARTY-LICENSES.txt  TODO.md  TRADEMARK.md  audit.toml  clippy.toml  coverage-floors.toml  deny.toml  eslint.config.mjs  index.html  lefthook.yml  max_survived_mutants.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements-ci.txt  requirements-yamllint.txt  rust-toolchain.toml  rustfmt.toml  (+5 more)
.github/: PULL_REQUEST_TEMPLATE.md  allowed_signers  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_or_format_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml  scorecard.yml  secrets-history.yml
assets/branding/: README.md
crates/imgworker/: Cargo.toml
crates/imgworker/src/: ffi.rs  main.rs
design/: tokens.css
docs/: SINGLE-SOURCE-OF-TRUTH.md  minisign.pub
docs/plan/: P0-build-and-security.md  P1-foundation.md  P10-release.md  P11-acceptance.md  P2-app-shell-contracts.md  P3-walking-skeleton.md  P4-engine-framework.md  P5-images.md  P6-av-crosscat.md  P7-office.md  P8-ui-ux.md  P9-hardening.md  README.md  _format.md
docs/process/: build-loop.md  gate-status.md  minisign-key-custody.md  p0-completion.md  release-pipeline-trust.md  roles-and-escalation.md  test-strategy.md  vuln-response.md
docs/security/: build-gates.md  security-concept.md
docs/spec/: 00-architecture.md  01-conversion-pipeline.md  02-guarantees.md  03-engines-and-bundling.md  05-ui-ux.md  06-build-test-release.md  07-app-shell.md  README.md
fuzz/: Cargo.toml  libfuzzer-bounds.txt
fuzz/corpus/fs_guard_is_safe_output/: nul_output_path
fuzz/corpus/fs_guard_resolve_identity/: nul_path  path_max_plus_1  win_device  win_drive_relative  win_reserved  win_trailing  win_unc
fuzz/fuzz_targets/: csv_tsv.rs  detect.rs  fs_guard_is_safe_output.rs  fs_guard_resolve_identity.rs
scripts/: check-branch-protection  check-build-matrix  check-ci-supply-chain  check-commit-msg  check-completeness  check-core-deps  check-corpus-integrity  check-coverage  check-csp-capabilities  check-deferral  check-dual-review  check-editorconfig  check-english-only  check-fuzz-contract  check-gate-plane  check-gate-planes  check-generated-drift  check-gitleaks-allowlist  check-js-supply-chain  check-l-neg1-ack  check-lockfile-integrity  check-release-tag-trust  check-repo-invariants  check-rs-test-refs  check-rust-lint-contract  check-sast  check-supply-chain  check-test-suppression  check-ts-gate  check-unsafe-policy  doc-fingerprints.toml  fastpath-docs-only  gate-planes.toml  gate-tools.toml  install-gate-tools  l-neg1-files.toml  plan-lint  run-gate-selftests  run-gitleaks  run-typos  (+2 more)
scripts/gate-selftests/: g24-branch-protection.py  g24-build-matrix.py  g24-ci-supply-chain.py  g24-commit-msg.py  g24-completeness.py  g24-core-deps.py  g24-corpus-integrity.py  g24-coverage.py  g24-csp-capabilities.py  g24-deferral.py  g24-dual-review.py  g24-editorconfig.py  g24-english-only.py  g24-fuzz-contract.py  g24-gate-planes.py  g24-generated-drift.py  g24-gitleaks-allowlist.py  g24-gitleaks.py  g24-install-gate-tools.py  g24-js-supply-chain.py  g24-l-neg1-ack.py  g24-lockfile-integrity.py  g24-plan-lint.py  g24-release-tag-trust.py  g24-repo-invariants.py  g24-rs-test-refs.py  g24-run-gitleaks.py  g24-rust-lint-contract.py  g24-sast.py  g24-stage-corpus.py  g24-supply-chain.py  g24-test-suppression.py  g24-ts-gate-contract.py  g24-typos.py  g24-unsafe-policy.py  g54-gate-plane.py  test-docs-only-fastpath-pattern.py
scripts/semgrep-rules/: net-allow-list.txt
spec/: 00-architecture.md  01-conversion-pipeline.md  02-guarantees.md  03-engines-and-bundling.md  05-ui-ux.md  06-build-test-release.md  07-app-shell.md  README.md
spec/04-formats/: audio.md  cross-category.md  documents.md  images.md  presentations.md  spreadsheets.md  video.md
src/: App.a11y.test.tsx  App.test.tsx  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  ipc-commands.golden  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: fuzz_bounds.rs  fuzz_replay.rs  lib.rs  log_redact.rs  main.rs  prefs.rs  test_corpus.rs  test_volumes.rs
src-tauri/src/detection/: mod.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/engines/: mod.rs  registry.rs
src-tauri/src/fs_guard/: mod.rs
src-tauri/src/ipc/: conversion.rs  intake.rs  mod.rs  planning.rs  slice_round_trip.rs  system.rs
src-tauri/src/isolation/: mod.rs
src-tauri/src/orchestrator/: cross_volume_e2e_tests.rs  link_safety_e2e_tests.rs  mod.rs  run_conversion_e2e_tests.rs
src-tauri/src/outcome/: mod.rs
src-tauri/src/platform/: mod.rs
src-tauri/src/pool/: mod.rs
src-tauri/src/run/: mod.rs
src/a11y/: announcer.test.ts  announcer.ts  g33a-canary.a11y.test.tsx  keymap.test.ts  keymap.ts
src/components/: AppFaultNotice.a11y.test.tsx  AppFaultNotice.test.tsx  AppFaultNotice.tsx  BatchSummary.a11y.test.tsx  BatchSummary.test.tsx  BatchSummary.tsx  CollectingScreen.a11y.test.tsx  CollectingScreen.test.tsx  CollectingScreen.tsx  ConfirmScreen.a11y.test.tsx  ConfirmScreen.test.tsx  ConfirmScreen.tsx  ConvertingScreen.a11y.test.tsx  ConvertingScreen.test.tsx  ConvertingScreen.tsx  DestinationBar.a11y.test.tsx  DestinationBar.test.tsx  DestinationBar.tsx  DropZone.a11y.test.tsx  DropZone.test.tsx  DropZone.tsx  FileList.a11y.test.tsx  FileList.test.tsx  FileList.tsx  FormatPicker.a11y.test.tsx  FormatPicker.test.tsx  FormatPicker.tsx  OpenActions.tsx  (+26 more)
supply-chain/: audits.toml  config.toml
tests/: detect-kat.toml
tests/g53-fixture/: Cargo.toml
tests/g53-fixture/convertia-core/: Cargo.toml
tests/g53-fixture/convertia-core/src/: lib.rs
tests/g53-fixture/libvips-sys/: Cargo.toml
tests/g53-fixture/libvips-sys/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+70 files in other folders)
