# src-tauri/Cargo.toml — the ConvertIA MIT core crate (the Tauri v2 host binary).
#
# Package name `convertia-core` is the name the G53 core-closure walk (scripts/check-core-deps,
# CORE_CRATE_NAME) resolves + polices: its transitive Cargo dependency closure must NEVER contain the
# image-worker copyleft C libs (libvips / libheif / libde265 / librsvg / libimagequant / ImageMagick),
# which are linked ONLY by the separate `convertia-imgworker` binary — aggregation, not linkage into
# the MIT core (spec §3.6.1, T6). The Tauri host (`tauri`) + the §0.4.5 IPC type-gen (`tauri-specta`)
# are wired across P1.12–P1.13, the §0.8 plugins in P1.14. The async runtime is the multi-threaded
# tokio runtime Tauri manages (§0.8/§0.9), pinned transitively in `Cargo.lock`; it is added as a direct
# dependency where in-crate `async` code first calls into it. The crate compiles to a minimal binary so
# the workspace, the live G3/G4/G14/G53/G18 gates, and the committed Cargo.lock have a real target.
[package]
name = "convertia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
# [Build-Session-Entscheidung: P2.85] §7.4.2 prefs read: `prefs::from_store_values` is a PURE helper
# (test-strategy §1.1a — no `AppHandle` in its signature, so it is coverage-counted + unit-tested, NOT
# boot-glue-exempt) that narrows the store's `serde_json::Value`s via `as_str`/`as_bool` (a wrong JSON type →
# the key's default, the §7.4.2 best-effort tolerance) — so it NAMES `serde_json::Value` in PRODUCTION.
# Promoted from the former P1.16 dev-only edge (the `window_model` / §6.4.x round-trip test parsers, which
# still use it): serde_json is ALREADY in the shipped MIT-core closure transitively (via `tauri`), so this
# promotion adds NO newly-resolved package, NO SBOM/G53 row, and it is not a §0.8-floored crate
# (check-supply-chain PINNED_FLOORS lists only the codegen/runtime-pinned crates). Caret-pinned to the
# lock-resolved 1.0.150 (the normal-lib convention `serde`/`uuid` use; `=`-exact is for the specta tools).
serde_json = "1.0.150"
specta = { version = "2.0.0-rc", features = ["derive", "uuid"] }
tauri = "2.11.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-store = "2.4.3"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive"] }
# [P3.4] §3.2.2 `TempPath = tempfile::TempPath` — the publish-temp type the `Invocation.out_tmp` engine-output
# field holds (a path whose file is deleted on drop, matching §2.1 "deleted on drop / never a placeholder").
# The §1.7 `EngineInvocation` envelope P3.4 authors transitively embeds `Invocation`, so `TempPath` enters
# PRODUCTION here — a direct-edge DEV→PROD promotion. tempfile 3.27.0 is ALREADY in `Cargo.lock` via the DEV
# graph (proptest → rusty-fork + the former dev edge; NOT via `tauri` — `tauri` has no tempfile edge), so this
# adds NO newly-resolved package (`Cargo.lock` unchanged). tempfile does newly enter the shipped MIT-core PROD
# closure here, but it + its transitives (fastrand, rustix/windows-sys) are all permissive with no
# copyleft/image libs, so G53 stays green and the release-time SBOM enumerates the live prod closure (no
# committed SBOM row to add here). §0.8 already lists tempfile (the "FS guarantees … exact" row) and the
# `check-supply-chain` PINNED_FLOORS row exists since P1.59 (the walkdir reconcile-to-present precedent), so NO
# §0.8 floor box is needed (the P3.4 ↔ P4.2/P4.3 reconcile). Still used by the §7.2.4 `ensure_executable` unix
# test (now via this prod edge). Caret-pinned to the lock-resolved 3.27.0 (the normal-lib convention).
tempfile = "3.27.0"
# [P3.3] §0.9/§1.7 in-core permit lane: `tokio::sync::Semaphore` (the global-degree permit) +
# `tokio::task::spawn_blocking` + `JoinError` (run the synchronous native CSV/TSV loop on a dedicated worker
# thread so it never blocks the Tauri-managed multi-thread tokio runtime driving the subprocess engines +
# IPC). Called DIRECTLY, not via `tauri::async_runtime::spawn_blocking`: the §0.7 tier-3 leaf must not depend
# up on the tauri host. FIRST direct tokio edge; ALREADY in Cargo.lock transitively via `tauri`, so this is a
# direct-edge promotion (no newly-resolved package, no SBOM/G53 row). Caret-pinned to the lock-resolved
# 1.52.3 (the normal-lib convention serde_json/tokio-util/uuid use; `=`-exact is for the specta codegen
# tools). Features `rt` (spawn_blocking + JoinError) + `sync` (Semaphore) — NOT `net` (no socket, so the G29
# rule (g)/(j) + cargo-deny [bans] no-network surface stays intact). §0.8 floor row: the paired L(-1) box P3.82.
tokio = { version = "1.52.3", features = ["rt", "sync"] }
# [P2.133] §0.4.4/§1.7 cancellation primitive — `tokio_util::sync::CancellationToken` for the RunId/
# CollectingId token registries (P2.42/P2.45). Caret-pinned to the lock-resolved 0.7.18 (the normal-lib
# convention, not the `=`-exact codegen-coupled specta tools); NO extra features (CancellationToken is in
# tokio-util's always-available `sync` module — default feature set empty). Already in Cargo.lock
# transitively via `tauri`, so this is a direct-edge promotion (no newly-resolved package). §0.8 floor row: P2.134.
tokio-util = "0.7.18"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
# [P2.64] §1.1 recursive intake — the depth-first folder walk (`crate::orchestrator::walk_intake_roots`)
# that expands a dropped/picked FOLDER into candidate file paths (the §2.4.1 freeze-spine step 1; the WebView
# cannot enumerate a directory, §0.4). Caret-pinned to the lock-resolved 2.5.0 (the normal-lib convention
# `serde`/`uuid`/`tokio-util` use; `=`-exact is reserved for the codegen-coupled specta tools); no extra
# features. ALREADY in Cargo.lock transitively (via the dev/build graph), so this is a direct-edge promotion
# (no newly-resolved package). The §0.8 drift-FLOOR row already exists in check-supply-chain's PINNED_FLOORS
# (added at P1.59, reconcile-to-present), so — unlike tokio-util (P2.133 dep / P2.134 floor) — no paired
# L(-1) floor box is needed: the floor is satisfied the moment this edge lands.
walkdir = "2.5.0"
# [P3.6] §2.3.1 `\\?\`-prefix display normalisation for `fs_guard::resolve_identity`'s canonical path
# (`dunce::canonicalize`; off-Windows a `std::fs::canonicalize` passthrough, so it is called uniformly). Caret-
# pinned to the lock-resolved 1.0.5 (the normal-lib convention). ALREADY in Cargo.lock via `tauri`, so this
# direct-edge promotion adds NO newly-resolved package; permissive (`CC0-1.0 OR MIT-0 OR Apache-2.0`) so
# G53/cargo-deny stay green. §0.8 drift-floor row landed at P3.83 (`dunce = 1.0.5`, reconcile-to-present) —
# NO L(-1) work in this box (the P3.6 hard-stop resolution).
dunce = "1.0.5"

# [P3.6] §2.3.1 Windows file-identity for `fs_guard::resolve_identity` — the SAFE `GetFileInformationByHandle`
# wrapper (`winapi_util::file::information` → `volume_serial_number()` / `file_index()`, both `u64`; NO
# `unsafe` in the core). Windows-only (the crate is `cfg(windows)`-empty elsewhere), so it rides
# `[target.'cfg(windows)'.dependencies]`; the std `MetadataExt` equivalents are nightly-gated
# (`windows_by_handle`, §2.3.1 `[CORRECTED 2026-07-07]`) and `same-file` exposes no Windows identity numbers.
# ALREADY in Cargo.lock via `walkdir`→`same-file`, so no newly-resolved package; §0.8 floor row landed at P3.83.
[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.11"

# [Build-Session-Entscheidung: P1.26] §0.4.5 IPC type-gen: the TypeScript exporter the `bindings_codegen`
# test uses to emit the single tracked `src/lib/ipc/bindings.ts` (driven by `cargo run -p xtask --
# codegen`). DEV-ONLY by design — `specta-typescript` + tauri-specta's `typescript` feature are needed
# solely to RUN the codegen test; under resolver 2 a feature requested only by a dev-dependency is NOT
# unified into the normal/release build, so the shipped MIT-core binary stays free of the TS-exporter
# code (a leaner audited dependency closure for G53/the SBOM). `specta-typescript` is pinned to the
# version compatible with the §0.8-locked specta `2.0.0-rc.25` (the same `0.0.12` line as `specta-util`).
[dev-dependencies]
# [Build-Session-Entscheidung: P2.128] §6.4.2 / test-strategy §1.3 property-test library: the Rust property
# + fault-injection level uses `proptest` (macro-based shrinking, no hand-rolled `Shrink` impls — the §P0.5
# / G16 "shrinking mandatory" rule; the TS sibling is `fast-check`). DEV-ONLY — property tests are
# `#[cfg(test)]`, so under resolver 2 proptest never enters the shipped MIT-core closure (no SBOM/G53 row;
# its transitive crates — rand / regex-syntax / rusty-fork / … — are all permissive, no socket or copyleft
# dep, so G18/cargo-deny stays clean). First consumed by the P2.14 §0.6-invariant property tests;
# caret-pinned to the lock-resolved 1.11.0 (the normal-lib convention the serde_json / tempfile dev-deps
# use; `=`-exact is reserved for the codegen-coupled specta tools). §0.8 fixes the *choice* ("property
# tests for guarantees"), not the digit; the §0.8 drift-FLOOR row is the separate L(-1) box P2.129.
proptest = "1.11.0"
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
# [P3.3] The §6.4.x `crate::pool` tests need `#[tokio::test]` (the `macros` feature) only — the
# permit-bounding test uses a std `Barrier` (the concurrency is on the blocking pool, so no
# `rt-multi-thread`), and the off-runtime / panic-release / degree-clamp tests use no timers (no `time`).
# DEV-ONLY — under resolver 2 a dev-dep feature never unifies into the shipped MIT-core build, so
# `macros`/`tokio-macros` stay out of the production closure (the tauri-specta normal-`derive` /
# dev-`typescript` split precedent). Same 1.52.3 pin as the prod `[dependencies]` tokio edge.
tokio = { version = "1.52.3", features = ["macros"] }
[build-dependencies]
tauri-build = "2.6.3"
