# src-tauri/Cargo.toml — the ConvertIA MIT core crate (the Tauri v2 host binary).
#
# Package name `convertia-core` is the name the G53 core-closure walk (scripts/check-core-deps,
# CORE_CRATE_NAME) resolves + polices: its transitive Cargo dependency closure must NEVER contain the
# image-worker copyleft C libs (libvips / libheif / libde265 / librsvg / libimagequant / ImageMagick),
# which are linked ONLY by the separate `convertia-imgworker` binary — aggregation, not linkage into
# the MIT core (spec §3.6.1, T6). The Tauri host (`tauri`) + the §0.4.5 IPC type-gen (`tauri-specta`)
# are wired across P1.12–P1.13, the §0.8 plugins in P1.14. The async runtime is the multi-threaded
# tokio runtime Tauri manages (§0.8/§0.9), pinned transitively in `Cargo.lock`; it is added as a direct
# dependency where in-crate `async` code first calls into it. The crate compiles to a minimal binary so
# the workspace, the live G3/G4/G14/G53/G18 gates, and the committed Cargo.lock have a real target.
[package]
name = "convertia-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
# [Build-Session-Entscheidung: P2.85] §7.4.2 prefs read: `prefs::from_store_values` is a PURE helper
# (test-strategy §1.1a — no `AppHandle` in its signature, so it is coverage-counted + unit-tested, NOT
# boot-glue-exempt) that narrows the store's `serde_json::Value`s via `as_str`/`as_bool` (a wrong JSON type →
# the key's default, the §7.4.2 best-effort tolerance) — so it NAMES `serde_json::Value` in PRODUCTION.
# Promoted from the former P1.16 dev-only edge (the `window_model` / §6.4.x round-trip test parsers, which
# still use it): serde_json is ALREADY in the shipped MIT-core closure transitively (via `tauri`), so this
# promotion adds NO newly-resolved package, NO SBOM/G53 row, and it is not a §0.8-floored crate
# (check-supply-chain PINNED_FLOORS lists only the codegen/runtime-pinned crates). Caret-pinned to the
# lock-resolved 1.0.150 (the normal-lib convention `serde`/`uuid` use; `=`-exact is for the specta tools).
serde_json = "1.0.150"
specta = { version = "2.0.0-rc", features = ["derive", "uuid"] }
tauri = "2.11.3"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-store = "2.4.3"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive"] }
# [P3.4] §3.2.2 `TempPath = tempfile::TempPath` — the publish-temp type the `Invocation.out_tmp` engine-output
# field holds (a path whose file is deleted on drop, matching §2.1 "deleted on drop / never a placeholder").
# The §1.7 `EngineInvocation` envelope P3.4 authors transitively embeds `Invocation`, so `TempPath` enters
# PRODUCTION here — a direct-edge DEV→PROD promotion. tempfile 3.27.0 is ALREADY in `Cargo.lock` via the DEV
# graph (proptest → rusty-fork + the former dev edge; NOT via `tauri` — `tauri` has no tempfile edge), so this
# adds NO newly-resolved package (`Cargo.lock` unchanged). tempfile does newly enter the shipped MIT-core PROD
# closure here, but it + its transitives (fastrand, rustix/windows-sys) are all permissive with no
# copyleft/image libs, so G53 stays green and the release-time SBOM enumerates the live prod closure (no
# committed SBOM row to add here). §0.8 already lists tempfile (the "FS guarantees … exact" row) and the
# `check-supply-chain` PINNED_FLOORS row exists since P1.59 (the walkdir reconcile-to-present precedent), so NO
# §0.8 floor box is needed (the P3.4 ↔ P4.2/P4.3 reconcile). Still used by the §7.2.4 `ensure_executable` unix
# test (now via this prod edge). Caret-pinned to the lock-resolved 3.27.0 (the normal-lib convention).
tempfile = "3.27.0"
# [P3.3] §0.9/§1.7 in-core permit lane: `tokio::sync::Semaphore` (the global-degree permit) +
# `tokio::task::spawn_blocking` + `JoinError` (run the synchronous native CSV/TSV loop on a dedicated worker
# thread so it never blocks the Tauri-managed multi-thread tokio runtime driving the subprocess engines +
# IPC). Called DIRECTLY, not via `tauri::async_runtime::spawn_blocking`: the §0.7 tier-3 leaf must not depend
# up on the tauri host. FIRST direct tokio edge; ALREADY in Cargo.lock transitively via `tauri`, so this is a
# direct-edge promotion (no newly-resolved package, no SBOM/G53 row). Caret-pinned to the lock-resolved
# 1.52.3 (the normal-lib convention serde_json/tokio-util/uuid use; `=`-exact is for the specta codegen
# tools). Features `rt` (spawn_blocking + JoinError) + `sync` (Semaphore) + `time` — NOT `net` (no socket, so
# the G29 rule (g)/(j) + cargo-deny [bans] no-network surface stays intact). §0.8 floor row: the paired L(-1)
# box P3.82. [P3.45] the `time` feature adds `tokio::time::timeout` — the §1.7 InProcessNative wall-clock
# timeout wrapper that bounds the native CSV/TSV lane (on expiry the lane future is dropped → its §0.9 permit
# frees, the blocking worker is abandoned → the item is `Failed(EngineHang)`, the run continues, §2.12.4).
# VERIFIED gate-inert (the P3.45 pre-build ruling): `time = []` is a bare in-crate tokio feature flag with NO
# optional dependency, so the feature-add resolves NO new package and `Cargo.lock` stays byte-identical
# (G18/G18a unchanged), and the P3.82 §0.8 floor is version-keyed (features orthogonal) — NO floor action, NO
# L(-1) touch. Still NOT `net`: the no-network dependency surface is intact.
# [P4.13] the `process` feature adds `tokio::process::Command` — the §2.12 confined-spawn primitive
# `crate::isolation::run_confined` builds the cheap-tier floor on (the FIRST spawn box; the P4.10
# process-wrap group-kill wraps this same spawn). Gate-inertness (the P3.45-①-style verification): `process`
# enables tokio's in-crate `signal` internals on unix, adding ONE unix-only dependency EDGE
# (`signal-hook-registry` — ALREADY lock-resolved transitively via tauri: no newly-resolved package, no
# network surface, no ban/advisory hit; G18/G18a posture unchanged); the P3.82 §0.8 floor is version-keyed
# (features orthogonal) — NO floor action, NO L(-1) touch. Still NOT `net`.
# [P4.8] the `io-util` feature exposes `tokio::io::{AsyncReadExt, AsyncBufReadExt, BufReader}` — the §1.7
# per-`ProgressModel` stdout line-reader + stderr-in-full capture `crate::isolation::run_confined` uses to
# drain a confined child's piped streams (streaming models → `progress_fraction` ticks; `CoarseSpawnDone`
# buffers the probe JSON; stderr captured in full). Gate-inert (the P3.45-①-style verification, VERIFIED via
# `cargo tree -e features -i tokio@1.52.3`): `io-util` is ALREADY enabled in the build graph by `tauri`'s own
# tokio edge (NOT by our `process` feature — tokio's `process` pulls `bytes`/`libc`/`mio`/`signal-hook-registry`,
# not `io-util`), so under Cargo feature unification naming it explicitly on OUR edge resolves NO new
# feature/package and `Cargo.lock` stays byte-identical (G18/G18a unchanged). Declaring it explicitly (rather
# than leaning on tauri's transitive enablement, which a future tauri bump could drop) makes convertia-core's
# own use of `io-util` honest. The P3.82 §0.8 floor is version-keyed (features orthogonal) — NO floor action,
# NO L(-1) touch. Still NOT `net`.
tokio = { version = "1.52.3", features = ["io-util", "process", "rt", "sync", "time"] }
# [P2.133] §0.4.4/§1.7 cancellation primitive — `tokio_util::sync::CancellationToken` for the RunId/
# CollectingId token registries (P2.42/P2.45). Caret-pinned to the lock-resolved 0.7.18 (the normal-lib
# convention, not the `=`-exact codegen-coupled specta tools); NO extra features (CancellationToken is in
# tokio-util's always-available `sync` module — default feature set empty). Already in Cargo.lock
# transitively via `tauri`, so this is a direct-edge promotion (no newly-resolved package). §0.8 floor row: P2.134.
tokio-util = "0.7.18"
uuid = { version = "1.23.3", features = ["serde", "v4"] }
# [P2.64] §1.1 recursive intake — the depth-first folder walk (`crate::orchestrator::walk_intake_roots`)
# that expands a dropped/picked FOLDER into candidate file paths (the §2.4.1 freeze-spine step 1; the WebView
# cannot enumerate a directory, §0.4). Caret-pinned to the lock-resolved 2.5.0 (the normal-lib convention
# `serde`/`uuid`/`tokio-util` use; `=`-exact is reserved for the codegen-coupled specta tools); no extra
# features. ALREADY in Cargo.lock transitively (via the dev/build graph), so this is a direct-edge promotion
# (no newly-resolved package). The §0.8 drift-FLOOR row already exists in check-supply-chain's PINNED_FLOORS
# (added at P1.59, reconcile-to-present), so — unlike tokio-util (P2.133 dep / P2.134 floor) — no paired
# L(-1) floor box is needed: the floor is satisfied the moment this edge lands.
walkdir = "2.5.0"
# [P3.6] §2.3.1 `\\?\`-prefix display normalisation for `fs_guard::resolve_identity`'s canonical path
# (`dunce::canonicalize`; off-Windows a `std::fs::canonicalize` passthrough, so it is called uniformly). Caret-
# pinned to the lock-resolved 1.0.5 (the normal-lib convention). ALREADY in Cargo.lock via `tauri`, so this
# direct-edge promotion adds NO newly-resolved package; permissive (`CC0-1.0 OR MIT-0 OR Apache-2.0`) so
# G53/cargo-deny stay green. §0.8 drift-floor row landed at P3.83 (`dunce = 1.0.5`, reconcile-to-present) —
# NO L(-1) work in this box (the P3.6 hard-stop resolution).
dunce = "1.0.5"
# [P3.27] §1.2 step-3 / §2.10.2 text-encoding detection for the magic-less formats — the
# `crate::detection::classify_encoding` heuristic (BOM → strict UTF-8 → single-byte codepage fallback), a
# pure-Rust bounded in-core detector so the §2.12.4 "no third-party C/C++ decoder in-core" absolute holds.
# Unlike every prior dep row (all direct-edge promotions of an already-locked transitive), chardetng is the
# FIRST GENUINELY-NEW package: it + its transitive `encoding_rs` 0.8.35 are newly-resolved into Cargo.lock and
# the shipped MIT-core PROD closure. Both are permissive (chardetng `Apache-2.0 OR MIT`; encoding_rs
# `(Apache-2.0 OR MIT) AND BSD-3-Clause`) and pure Rust with no socket/copyleft/image-C-lib edge, so G53
# core-closure + cargo-deny [licenses]/[bans] + cargo-audit stay green (verified: 479-crate closure OK, no
# forbidden crate). Default features only (the `multithreading`/`rayon` features are NOT enabled — only 2
# packages locked, no rayon). Caret-pinned to the lock-resolved 1.0.0 (the normal-lib convention). §0.8 lists
# chardetng (the "Additional crates … chardetng §1.2" row); the paired `check-supply-chain` PINNED_FLOORS §0.8
# drift-floor row is L(-1) (G71) — landed by the Co-Pilot box P3.85 (with encoding_rs + csv), mirroring the
# tokio P3.82 / rustix P3.84 split
# (a new direct dep ABSENT from PINNED_FLOORS does not red G18: the floor is a present-crate check, P3.82).
chardetng = "1.0.0"
# [P3.27] encoding_rs is a DIRECT dep too (not only chardetng's transitive): `classify_encoding` names its
# `Encoding` / `UTF_8` types + calls `Encoding::for_bom` (BOM detection) and `Encoding::name` (the §1.4
# encoding_hint), and chardetng::guess returns a `&'static encoding_rs::Encoding`. Already in Cargo.lock at
# 0.8.35 via chardetng, so this direct edge adds NO newly-resolved package. Default features only (NO
# `simd-accel`/`serde`/fast-*-encode). Caret-pinned to the lock-resolved 0.8.35. Its §0.8 PINNED_FLOORS row
# rides the same Co-Pilot L(-1) box as chardetng — P3.85 (both first-new packages of P3.27).
encoding_rs = "0.8.35"
# [P3.41] §3.5.6 native CSV/TSV transform — a real RFC-4180 reader/writer for the streamed CSV↔TSV pass
# (`crate::engines` `csv_tsv_transform`): the source `csv::Reader` (source delimiter, flexible field count,
# no header) parses records, the `csv::Writer` (target delimiter) re-quotes any field containing the new
# delimiter / quote / newline per RFC-4180 — so field content (incl. a leading `= + - @`) is preserved
# LITERALLY (the §3.5.6 CSV-injection-safe guarantee, bound by G32 at P3.42). Uses only the low-level
# `ByteRecord` API (no serde record de/serialization), but `csv` depends on `serde` unconditionally (already
# in the closure). A GENUINELY-NEW package like chardetng (P3.27): `csv` + its transitive `csv-core` are
# newly-resolved into Cargo.lock and the shipped MIT-core PROD closure (`csv` + `csv-core` + `ryu` — `itoa` /
# `memchr` were already present). All permissive (`csv`/`csv-core` `Unlicense OR MIT` → the MIT leg satisfies
# deny.toml; `ryu` `Apache-2.0 OR BSL-1.0` → the Apache-2.0 leg), pure Rust with
# no socket/copyleft/image-C-lib edge, so G53 core-closure + cargo-deny [licenses]/[bans] + cargo-audit stay
# green. Default features only. Caret-pinned to the lock-resolved 1.4.0 (the normal-lib convention). §0.8 gains
# the `csv §3.5.6` "Additional crates" row in this commit (DoD 2); the paired `check-supply-chain`
# PINNED_FLOORS §0.8 drift-floor row is L(-1) (G71) — landed by the Co-Pilot box P3.85, mirroring the
# chardetng P3.27 / tokio P3.82 split (a new direct dep ABSENT from PINNED_FLOORS does not red G18: the
# floor is a present-crate check, P3.82).
csv = "1.4.0"

# [P3.12] §2.1.1/§2.1.2 Unix single-call no-replace publish primitive for `fs_guard::publish_noreplace` — the
# SAFE `rustix::fs::renameat_with(olddirfd, tmp, dirfd, leaf, RenameFlags::NOREPLACE)` maps to Linux
# `renameat2(RENAME_NOREPLACE)` and macOS `renameatx_np(RENAME_EXCL)`, BOTH box spellings behind ONE safe
# dirfd-relative call (`AsFd`, fits the P3.9 verified parent handle) with NO `unsafe` in the core (the crate
# root `#![deny(unsafe_code)]` holds; `libc` was rejected — raw `unsafe` per call site). Unix-only, so it rides
# `[target.'cfg(unix)'.dependencies]`. Feature `fs` gates `rustix::fs`; default `std` gives `From<Errno> for
# io::Error`. ALREADY in Cargo.lock via `tempfile`, so no newly-resolved package; §0.8 floor row landed at
# P3.84 (the P3.12 Co-Pilot ruling). Cargo.toml is not L(-1) — this promotion is the Loop's per the ruling.
[target.'cfg(unix)'.dependencies]
rustix = { version = "1.1.4", features = ["fs"] }

# [P3.6] §2.3.1 Windows file-identity for `fs_guard::resolve_identity` — the SAFE `GetFileInformationByHandle`
# wrapper (`winapi_util::file::information` → `volume_serial_number()` / `file_index()`, both `u64`; NO
# `unsafe` in the core). Windows-only (the crate is `cfg(windows)`-empty elsewhere), so it rides
# `[target.'cfg(windows)'.dependencies]`; the std `MetadataExt` equivalents are nightly-gated
# (`windows_by_handle`, §2.3.1 `[CORRECTED 2026-07-07]`) and `same-file` exposes no Windows identity numbers.
# ALREADY in Cargo.lock via `walkdir`→`same-file`, so no newly-resolved package; §0.8 floor row landed at P3.83.
[target.'cfg(windows)'.dependencies]
winapi-util = "0.1.11"
# [P3.14] §2.1.2/§2.3.3 the Windows dir-handle-relative create-only publish — the FileRenameInformationEx-class
# no-replace move. This is the core's FIRST `unsafe` FFI (the one allow-listed surface `crate::platform`, G29).
# ALREADY in Cargo.lock via many transitive users, so no newly-resolved package; the §0.8 drift-floor row +
# `check-supply-chain` PINNED_FLOORS landed at P3.84. [Build-Session-Entscheidung: P3.14] the NT
# `NtSetInformationFile(FileRenameInformationEx)` route (ntdll) per spec §2.3.3 — the Win32
# `SetFileInformationByHandle` alternative the box note offered CANNOT do the required RootDirectory-HANDLE-
# relative move (verified locally: it returns ERROR_INVALID_PARAMETER on a non-NULL RootDirectory), so the
# §2.3.3 TOCTOU-closing dir-handle-relative publish needs the NT API. Features: `Wdk_Storage_FileSystem`
# (NtSetInformationFile / FILE_RENAME_INFORMATION / FileRenameInformationEx), `Win32_Foundation` (HANDLE /
# NTSTATUS / STATUS_* / RtlNtStatusToDosError), `Win32_Storage_FileSystem` (DELETE / SYNCHRONIZE), and
# `Win32_System_IO` (IO_STATUS_BLOCK).
windows-sys = { version = "0.61.2", features = ["Wdk_Storage_FileSystem", "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_IO"] }

# [Build-Session-Entscheidung: P1.26] §0.4.5 IPC type-gen: the TypeScript exporter the `bindings_codegen`
# test uses to emit the single tracked `src/lib/ipc/bindings.ts` (driven by `cargo run -p xtask --
# codegen`). DEV-ONLY by design — `specta-typescript` + tauri-specta's `typescript` feature are needed
# solely to RUN the codegen test; under resolver 2 a feature requested only by a dev-dependency is NOT
# unified into the normal/release build, so the shipped MIT-core binary stays free of the TS-exporter
# code (a leaner audited dependency closure for G53/the SBOM). `specta-typescript` is pinned to the
# version compatible with the §0.8-locked specta `2.0.0-rc.25` (the same `0.0.12` line as `specta-util`).
[dev-dependencies]
# [Build-Session-Entscheidung: P2.128] §6.4.2 / test-strategy §1.3 property-test library: the Rust property
# + fault-injection level uses `proptest` (macro-based shrinking, no hand-rolled `Shrink` impls — the §P0.5
# / G16 "shrinking mandatory" rule; the TS sibling is `fast-check`). DEV-ONLY — property tests are
# `#[cfg(test)]`, so under resolver 2 proptest never enters the shipped MIT-core closure (no SBOM/G53 row;
# its transitive crates — rand / regex-syntax / rusty-fork / … — are all permissive, no socket or copyleft
# dep, so G18/cargo-deny stays clean). First consumed by the P2.14 §0.6-invariant property tests;
# caret-pinned to the lock-resolved 1.11.0 (the normal-lib convention the serde_json / tempfile dev-deps
# use; `=`-exact is reserved for the codegen-coupled specta tools). §0.8 fixes the *choice* ("property
# tests for guarantees"), not the digit; the §0.8 drift-FLOOR row is the separate L(-1) box P2.129.
proptest = "1.11.0"
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
# [P3.3] The §6.4.x `crate::pool` tests need `#[tokio::test]` (the `macros` feature) only — the
# permit-bounding test uses a std `Barrier` (the concurrency is on the blocking pool, so no
# `rt-multi-thread`), and the off-runtime / panic-release / degree-clamp tests use no timers (no `time`).
# DEV-ONLY — under resolver 2 a dev-dep feature never unifies into the shipped MIT-core build, so
# `macros`/`tokio-macros` stay out of the production closure (the tauri-specta normal-`derive` /
# dev-`typescript` split precedent). Same 1.52.3 pin as the prod `[dependencies]` tokio edge.
tokio = { version = "1.52.3", features = ["macros"] }
[build-dependencies]
tauri-build = "2.6.3"

# `cfg(fuzzing)` is the compile-time flag `cargo fuzz` injects (RUSTFLAGS `--cfg fuzzing`); the G48
# fuzz build gates `run()` out on it (lib.rs — the `generate_context!` host/target debug-assertions
# skew, the 2026-07-22 P3.73 fixup). Declaring it via check-cfg keeps rustc's `unexpected_cfgs` lint
# quiet in the NORMAL build, where the cfg is never set — G4 runs `-D warnings`, so an undeclared
# custom cfg would otherwise redden every clippy pass. (The cargo-fuzz-documented declaration shape.)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }
